<resources>
    <string name="app_name">Education Portal</string>
    <string name="stu_portal_main_btn">STUDENTS PORTAL</string>
    <string name="tch_portal_main_btn">TEACHERS PORTAL</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="btn_sign_in">DONE</string>
    <string name="invalid_sign_in_toast">Invalid Email / Password</string>
    <string name="title_activity_students_dashboard">StudentsDashboard</string>
    <string name="et_name">Name</string>
    <string name="logout">Logout</string>
    <string name="et_notificaion_title">Notification Title</string>
    <string name="et_notificaion_descp">Norification Description</string>
    <string name="et_assignment_title">Assignment Title</string>
    <string name="et_assignment_descp">Assignment Description</string>
    <string name="et_user_name">Name</string>
    <string name="et_user_email">Email</string>
</resources>
