<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.educationportal.MainActivity"
    android:background="@drawable/biler"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/app_name"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            />


        <Button
            android:id="@+id/stu_portal_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stu_portal_main_btn"/>


        <Button
            android:id="@+id/tch_portal_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tch_portal_main_btn"/>

    </LinearLayout>


</FrameLayout>
