<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_name"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/stuSemGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Semester"/>


        <RadioButton
            android:id="@+id/firstSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1st Semester"/>
        <RadioButton
            android:id="@+id/secondSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2nd Semester"/>
        <RadioButton
            android:id="@+id/thirdSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3rd Semester"/>
        <RadioButton
            android:id="@+id/fourthSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4th Semester"/>
        <RadioButton
            android:id="@+id/fifthSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5th Semester"/>
        <RadioButton
            android:id="@+id/sixthSem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="6th Semester"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_in"/>

</LinearLayout>